# ml-assignment

./: README.md  app.py  pyproject.toml  requirements.txt
model/: decision_tree.py  knn.py  logistic_regression.py  naive_bayes.py  preprocess.py  random_forest.py  xgboost_model.py
model/data/: X_test.csv  X_train.csv  scaler.pkl  test_set.csv
model/metrics/: decision_tree.json  knn.json  logistic_regression.json  naive_bayes.json  random_forest.json  xgboost.json
model/model/: decision_tree.pkl  logistic_regression.pkl  naive_bayes.pkl  xgboost.pkl
