[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "pandas>=2.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.2.0",
]
